# pizauth

./: CHANGES.md  COPYRIGHT  Cargo.toml  Makefile  README.Linux.md  README.md  README.systemd.md  build.rs  clippy.toml  pizauth.1  pizauth.bashcomp  pizauth.conf.5  pizauth.conf.example  pizauth.service
.github/workflows/: ci.yml
examples/: pizauth-state-custom.service  pizauth.conf
examples/systemd/: pizauth.conf
examples/systemd-dropins/: age.conf
lib/systemd/user/: pizauth-state-age.service  pizauth-state-creds.service  pizauth-state-gpg-passphrase.service  pizauth-state-gpg.service  pizauth.service
share/bash/: completion.bash
share/fish/: pizauth.fish
share/zsh/: _pizauth
src/: config.l  config.rs  config.y  config_ast.rs  main.rs  shell_cmd.rs  show_token.rs  token_request.rs  user_sender.rs
src/authenticator/: http_server.rs  mod.rs  refresher.rs  user_requests.rs
src/compat/: daemon.rs  mod.rs
src/frontends/: mod.rs  notify_rust.rs  null.rs
src/server/: eventer.rs  http_server.rs  mod.rs  notifier.rs  refresher.rs  request_token.rs  state.rs  user_listener.rs  user_requests.rs
systemd-dropins/: gpg-dump.conf
tests/: basic.rs
