[package]
name = "pizauth"
description = "Command-line OAuth2 authentication daemon"
version = "1.0.11"
repository = "https://github.com/ltratt/pizauth/"
authors = ["Laurence Tratt <laurie@tratt.net>"]
readme = "README.md"
license = "Apache-2.0 OR MIT"
categories = ["authentication"]
keywords = ["oauth", "oauth2", "authentication"]
edition = "2021"

[build-dependencies]
cfgrammar = "0.14"
lrlex = "0.14"
lrpar = "0.14"
rerun_except = "1"

[dependencies]
base64 = "0.22"
boot-time = "0.1.2"
cfgrammar = "0.14"
chacha20poly1305 = "0.10"
chrono = "0.4"
getopts = "0.2"
hostname = "0.4"
log = "0.4"
lrlex = "0.14"
lrpar = "0.14"
nix = { version="0.31.2", features=["fs", "signal"] }
rand = "0.10.1"
serde = { version="1.0", features=["derive"] }
sha2 = "0.11.0"
serde_json = "1"
stderrlog = "0.6"
syslog = "7.0.0"
ureq = "3"
url = "2"
wait-timeout = "0.2"
whoami = "2.1.2"
rustls = { version = "0.23.12", features = ["ring", "std"], default-features = false }
rcgen = { version = "0.14.5", features = ["crypto", "ring"], default-features = false }
wincode = { version = "0.5.3", features = ["derive"] }

[target.'cfg(target_os="openbsd")'.dependencies]
pledge = "0.4"
unveil = "0.3"

[target.'cfg(target_os="macos")'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[lints.rust]
future_incompatible = "warn"
keyword_idents = "warn"
nonstandard_style = "warn"
rust_2018_compatibility = "deny"
rust_2018_idioms = "deny"
rust_2021_compatibility = "deny"
rust_2024_compatibility = "deny"
let_underscore = "warn"

## TODO, disabled since they currently fail
elided_lifetimes_in_paths = { level = "allow", priority = 1 }
let_underscore_drop = { level = "allow", priority = 1 }
tail_expr_drop_order = { level = "allow", priority = 1 }
if_let_rescope = { level = "allow", priority = 1 }

[lints.clippy]
pedantic = "warn"
## TODO, disabled since they currently fail
similar_names = { level = "allow", priority = 1 }
redundant_else = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }
manual_let_else = { level = "allow", priority = 1 } # pervasive if we want to be consistent
single_match_else = { level = "allow", priority = 1 }
implicit_clone = { level = "allow", priority = 1 }
unnecessary_wraps = { level = "allow", priority = 1 }
unnecessary_debug_formatting = { level = "allow", priority = 1 }
needless_pass_by_value = { level = "allow", priority = 1 }
ignored_unit_patterns = { level = "allow", priority = 1 }
redundant_closure_for_method_calls = { level = "allow", priority = 1 }
unused_self = { level = "allow", priority = 1 }

nursery = "warn"
## TODO, disabled since they currently fail
redundant_clone = { level = "allow", priority = 1 }
significant_drop_in_scrutinee = { level = "allow", priority = 1 }
significant_drop_tightening = { level = "allow", priority = 1 }
needless_collect = { level = "allow", priority = 1 }
missing_const_for_fn = { level = "allow", priority = 1 }
path_buf_push_overwrite = { level = "allow", priority = 1 }
map_unwrap_or = { level = "allow", priority = 1 }
option_if_let_else = { level = "allow", priority = 1 }
